--- a/views/all-products.handlebars
+++ b/views/all-products.handlebars
@@ -7,14 +7,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/piano/piano-large.jpg" alt="Image" height="400" width="350">
+                                <img src="/images/piano/piano-large.jpg" alt="Image" height="300" width="250">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 100101</h4>
-                            <h3 id = "item-name">Piano Large</h3>
-                            <h4>Price: $1514.99</h4>
-                            <h4>In Stock: 10</h4>
+                            <h5>SKU: 100101</h5>
+                            <h4 id = "item-name">Piano Large</h3>
+                            <h5>Price: $1514.99</h5>
+                            <h5>In Stock: 10</h5>
                         </div>
                     </div>                         
                 </div>                
@@ -29,14 +29,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/piano/piano-electric-autotune.JPG" alt="Image" height="400" width="350">
+                                <img src="/images/piano/piano-electric-autotune.JPG" alt="Image" height="250" width="250">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 100111</h4>
-                            <h3 id = "item-name">Piano Electric</h3>
-                            <h4>Price: $3854.99</h4>
-                            <h4>In Stock: 06</h4>
+                            <h5>SKU: 100111</h5>
+                            <h4 id = "item-name">Piano Electric</h4>
+                            <h5>Price: $3854.99</h5>
+                            <h5>In Stock: 06</h5>
                         </div>
                     </div>                    
                     <a href="product">
@@ -51,14 +51,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/piano/piano-beginner.JPG" alt="Image" height="400" width="350">
+                                <img src="/images/piano/piano-beginner.JPG" alt="Image" height="300" width="250">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 100121</h4>
-                            <h3 id = "item-name">Piano Beginner</h3>
-                            <h4>Price: $877.99</h4>
-                            <h4>In Stock: 02</h4>
+                            <h5>SKU: 100121</h5>
+                            <h4 id = "item-name">Piano Beginner</h4>
+                            <h5>Price: $877.99</h5>
+                            <h5>In Stock: 02</h5>
                         </div>
                     </div>
                     <a href="product">
@@ -69,7 +69,8 @@
         </div>        
     </div>        
 </div>       
-<button class = "button expanded large" id = "category-header">Guitar Category</button>      
+      
+<button class = "button expanded large" id = "category-header">Guitar Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
         <div id= "information-btn">
@@ -78,14 +79,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/guitar/guitar-blue.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/guitar/guitar-blue.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 200101</h4>
-                            <h3 id = "item-name">Guitar Blue</h3>
-                            <h4>Price: $851.99</h4>
-                            <h4>In Stock: 04</h4>
+                            <h5>SKU: 200101</h5>
+                            <h4 id = "item-name">Guitar Blue</h4>
+                            <h5>Price: $851.99</h5>
+                            <h5>In Stock: 04</h5>
                         </div>
                     </div>                              
                 </div>
@@ -100,14 +101,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/guitar/guitar-electric-italian.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/guitar/guitar-electric-italian.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 200111</h4>
-                            <h3 id = "item-name">Guitar Electric Italian</h3>
-                            <h4>Price: $1299.99</h4>
-                            <h4>In Stock: 02</h4>
+                            <h5>SKU: 200111</h5>
+                            <h4 id = "item-name">Guitar Electric Italian</h4>
+                            <h5>Price: $1299.99</h5>
+                            <h5>In Stock: 02</h5>
                         </div>
                     </div>  
                 </div>                  
@@ -122,14 +123,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/guitar/guitar-regular.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/guitar/guitar-regular.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 200121</h4>
-                            <h3 id = "item-name">Guitar Regular</h3>
-                            <h4>Price: $354.99</h4>
-                            <h4>In Stock: 07</h4>
+                            <h5>SKU: 200121</h5>
+                            <h4 id = "item-name">Guitar Regular</h4>
+                            <h5>Price: $354.99</h5>
+                            <h5>In Stock: 07</h5>
                         </div>
                     </div>                    
                 </div>                  
@@ -139,7 +140,8 @@
             </a>
         </div>
     </div>        
-</div>        
+</div>       
+      
 <button class = "button expanded large" id = "category-header">Live Sound Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
@@ -149,7 +151,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/live-sound/yahama-40-channels.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/live-sound/yahama-40-channels.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -171,14 +173,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/live-sound/jbl-mixer-with-speakers.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/live-sound/jbl-mixer-with-speakers.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 300111</h4>
-                            <h3 id = "item-name">JBL Mixer-Speakers</h3>
-                            <h4>Price: $1267.99</h4>
-                            <h4>In Stock: 04</h4>
+                            <h5>SKU: 300111</h5>
+                            <h4 id = "item-name">JBL Mixer-Speakers</h4>
+                            <h5>Price: $1267.99</h5>
+                            <h5>In Stock: 04</h5>
                         </div>
                     </div>                   
                 </div>                  
@@ -193,7 +195,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/live-sound/yamaha-mg16xu.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/live-sound/yamaha-mg16xu.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -210,7 +212,8 @@
             </a>
         </div>
     </div>        
-</div>           
+</div>       
+         
 <button class = "button expanded large" id = "category-header">Drum and Percussion Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
@@ -220,14 +223,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/drum-percussion/full-drum-set.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/drum-percussion/full-drum-set.JPG" alt="Image" height="250" width="250">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 400101</h4>
-                            <h3 id = "item-name">Full Drum Set</h3>
-                            <h4>Price: $3029.99</h4>
-                            <h4>In Stock: 01</h4>
+                            <h5>SKU: 400101</h5>
+                            <h4 id = "item-name">Full Drum Set</h3>
+                            <h5>Price: $3029.99</h5>
+                            <h5>In Stock: 01</h5>
                         </div>
                     </div>                               
                 </div>
@@ -242,14 +245,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/drum-percussion/percussion-6set.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/drum-percussion/percussion-6set.JPG" alt="Image" height="250" width="250">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 400111</h4>
-                            <h3 id = "item-name">Percussion 6 Set</h3>
-                            <h4>Price: $599.99</h4>
-                            <h4>In Stock: 04</h4>
+                            <h5>SKU: 400111</h5>
+                            <h4 id = "item-name">Percussion 6 Set</h4>
+                            <h5>Price: $599.99</h5>
+                            <h5>In Stock: 04</h5>
                         </div>
                     </div>                    
                 </div>                  
@@ -264,14 +267,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/drum-percussion/tubano.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/drum-percussion/tubano.JPG" alt="Image" height="250" width="250">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 400121</h4>
-                            <h3 id = "item-name">Tubano</h3>
-                            <h4>Price: $229.99</h4>
-                            <h4>In Stock: 04</h4>
+                            <h5>SKU: 400121</h5>
+                            <h4 id = "item-name">Tubano</h4>
+                            <h5>Price: $229.99</h5>
+                            <h5>In Stock: 04</h5>
                         </div>
                     </div>
                     
@@ -283,6 +286,7 @@
         </div>
     </div>        
 </div>       
+        
 <button class = "button expanded large" id = "category-header">Keyboard Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
@@ -292,7 +296,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/keyboard/casio-keyboard-automatic.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/keyboard/casio-keyboard-automatic.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -314,7 +318,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/keyboard/electric-keyboard-general.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/keyboard/electric-keyboard-general.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -336,7 +340,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/keyboard/yamaha-psp-autotune.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/keyboard/yamaha-psp-autotune.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -353,8 +357,9 @@
             </a>
         </div>    
     </div>        
-</div>            
-<button class = "button expanded large" id = "category-header">Music Lesson Category</button>      
+</div>       
+                  
+<button class = "button expanded large" id = "category-header">Lesson Category</button>
 <div class="grid-container fluid" id = "category-display">
    <div class="grid-x grid-margin-x">
         <div id= "information-btn">
@@ -363,7 +368,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/music-lesson/music-lesson-guitar.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/music-lesson/music-lesson-guitar.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -385,7 +390,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/music-lesson/music-lesson-trumpet.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/music-lesson/music-lesson-trumpet.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -407,14 +412,14 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/music-lesson/music-lesson-piano.JPG" alt="Image" height="300" width="300">
+                                <img src="/images/music-lesson/music-lesson-piano.JPG" alt="Image" height="200" width="200">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
-                            <h4>SKU: 600121</h4>
-                            <h3 id = "item-name">Piano Lesson</h3>
-                            <h4>Price: $999.99</h4>
-                            <h4>In Stock: 06</h4>
+                            <h5>SKU: 600121</h5>
+                            <h4 id = "item-name">Piano Lesson</h4>
+                            <h5>Price: $999.99</h5>
+                            <h5>In Stock: 06</h5>
                         </div>
                     </div>
                     
@@ -426,6 +431,5 @@
         </div>
     </div>        
 </div>       
-      
       
  
