--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -5,7 +5,7 @@
                 <div class="media-object">
                     <div class="media-object-section" id = "product-description">
                         <div >
-                            {{#each this}}                                                                  
+                            {{#each productData}}                                                                  
                                 <p id = "picture-list"><img src={{picture}} width="300" height="200"></p>
                                 <h4 id = "sku-id">SKU: {{sku}}</h4> 
                                 <h5 id = "product-name-id">Product Name: {{product_name}}</h5>
