--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -5,7 +5,7 @@
                 <div class="media-object">
                     <div class="media-object-section" id = "category-description">
                         <div >
-                            {{#each this}}                                                                  
+                            {{#each categoryData}}                                                                  
                                 <h2 id = "category_id">Category Id: {{category_id}}</h2> 
                                 <h3 id = "category-name-id">Category Name: {{category_name}}</h3>
                                 <p id = "category-picture"><img src={{category_picture}} width="700" height="700"></p>                                                                    
