--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -23,6 +23,7 @@
         
         <img src="/images/placeholder_pic-6.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
         <img src="/images/placeholder_pic-7.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
+        <button class = "button medium" id = "advice-button">Buy Online Save Money</button>
 
       </div>
 
