--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -23,6 +23,7 @@
         
         <img src="/images/placeholder_pic-6.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
         <img src="/images/placeholder_pic-7.jpg" alt="Image" height="100%" width="100%" id="home-main-pic">
+        <button class = "button medium" id = "advice-button">Buy Online Save Money</button>
 
       </div>
 
@@ -38,9 +39,7 @@
         <a href = "lesson">
         <img src="/images/music-lesson-category.png" id = "music-lesson-picture" alt="Image" height="200" width="100%">      
         <button class = "button medium" id = "music-lesson-button">Music Lesson Category</button>
-        </a>
-        
-        
+        </a>        
       </div>
     </div>
   </div>
