--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -5,7 +5,7 @@
                 <div class="media-object">
                     <div class="media-object-section" id = "user-description">
                         <div >
-                            {{#each this}}                                                                                                  
+                            {{#each userData}}                                                                                                  
                                 <h2 id = "user-id">User-id: {{id}}</h2> 
                                 <h3 id = "user-name">Name: {{name}}</h3>
                                 <h3 id = "email-id">Email Id: {{email_id}}</h3>
