public folder update

--- a/views/piano.handlebars
+++ b/views/piano.handlebars
@@ -7,7 +7,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/piano/piano-large.jpg" alt="Image" height="300" width="250">
+                                <img src="/images/piano/piano-large.JPG" alt="Image" height="300" width="250">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
