--- a/views/all-products.handlebars
+++ b/views/all-products.handlebars
@@ -7,7 +7,7 @@
                     <div class="media-object">
                         <div class="media-object-section">
                             <div class="thumbnail">
-                                <img src="/images/piano/piano-large.jpg" alt="Image" height="300" width="250">
+                                <img src="/images/piano/piano-large.JPG" alt="Image" height="300" width="250">
                             </div>
                         </div>                   
                         <div class="media-object-section" id = "piano-information">
@@ -68,7 +68,7 @@
             </div>
         </div>        
     </div>        
-</div>       
+</div>              
       
 <button class = "button expanded large" id = "category-header">Guitar Category</button>
 <div class="grid-container fluid" id = "category-display">
